# inferaagent

./: .gitignore  AICTE Recognized UG Engineering Branches Categorized.csv  All_Engineering_Branches_Aerospace_Spaced3.csv  Branch With Job Roles.csv  Engineering colleges cleaned.csv  NIRF_2025_Engineering.csv  NIRF_2025_University.csv  PROJECT_5_All_Branches_Filled.csv  Road map.csv  Salary.csv  University-ALL UNIVERSITIES.csv  check_headers.py  check_models.py  cleanup_db.py  execute_sql_dump.py  fix_schema.py  generate_sql_dump.py  headers.txt  main.py  pyproject.toml  requirements.txt  seed_db.py  vectorize_data.py
.github/workflows/: keep_alive.yml
app/: main.py
app/controllers/: agent_controller.py
app/models/: schemas.py
app/services/: agent_service.py  rag_service.py
app/tools/: extensive_tools.py
