[project]
name = "inferaagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "genai>=1.0.3",
    "google-generativeai>=0.8.6",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "supabase>=2.28.1",
    "tavily-python>=0.7.23",
    "vecs>=0.4.5",
]
